# Recipee_AI_Asistant

./: .gitignore  QUICKSTART.md  README.md  install_log.txt  pyproject.toml  start_server.bat  test_api.py
recipe_app/: admin.py  ai_service.py  models.py  tests.py  urls.py  views.py
recipe_app/migrations/: 0001_initial.py
recipe_project/: asgi.py  settings.py  urls.py  wsgi.py
src/agentic_ai_assistant/: main.py  pdf_processor.py  rag_chain.py  vector_store.py
static/css/: style.css
static/js/: main.js
templates/: home.html
